[package]
name = "vulkano_text"
version = "0.16.0"
edition = "2021"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Render text with the DejaVu font using the Vulkano library."
license = "MIT"
repository = "https://github.com/rukai/vulkano-text"
keywords = ["vulkano", "text", "font"]

[dependencies]
rusttype = { version = "0.8", features = ["gpu_cache"] }
vulkano = "0.31.0"
vulkano-shaders = "0.31.0"
bytemuck = "1.7.0"

[dev-dependencies]
winit = "0.27.0"
vulkano-win = "0.31.0"
